<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/fondo_dialog">

    <TextView
        android:text="@string/registrar_grupo"
        android:fontFamily="@font/montserrat_extra_bold_italic"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">
        <TextView
            android:text="@string/grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_semi_bold"/>

        <EditText
            android:id="@+id/nuevoGrupo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:hint="@string/ingrese_grupo"
            android:textSize="12sp"
            android:textColorHint="@color/grisPalidoOscuro"
            android:textColor="@drawable/texto_edit_text"
            android:background="@drawable/fondo_escribir"
            />
    </LinearLayout>

    <TextView
        android:text="@string/aula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"/>

    <RadioGroup
        android:id="@+id/opcionesAula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/opcionNuevaAula"
            android:text="@string/nueva_aula"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/opcionSeleccionarAula"
            android:text="@string/seleccionar_existente"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etNuevaAula"
            android:background="@drawable/fondo_escribir"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:hint="@string/aula_et"
            android:maxLines="1"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerAulas"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/fondo_redondeado"
            android:backgroundTint="@color/grisPalidoClaro"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <TextView
        android:text="@string/alumnos_agregar_grupo"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"/>

    <LinearLayout
        android:id="@+id/contenedorBuscador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/fondo_redondeado"
        android:backgroundTint="@color/grisPalidoClaro">

        <ImageView
            android:src="@drawable/icono_buscar"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginHorizontal="5dp"/>

        <EditText
            android:id="@+id/buscadorAlumnos"
            android:hint="Buscar alumnos"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:background="@null"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="12sp"
            android:textColorHint="@color/grisPalidoOscuro"
            android:textColor="@color/grisPalidoOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAgregarAlumnosGrupo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingVertical="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelarRegistroGrupo"
            android:text="@string/cancelar"
            android:textSize="15sp"
            android:background="@color/blanco"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_width="wrap_content"
            android:elevation="0dp"
            android:translationZ="0dp"
            android:textColor="@drawable/texto_seleccion_cancelacion"
            android:stateListAnimator="@null"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrarGrupo"
            android:text="@string/registrar"
            android:textSize="15sp"
            android:elevation="0dp"
            android:translationZ="0dp"
            android:stateListAnimator="@null"
            android:background="@color/blanco"
            android:textColor="@drawable/texto_seleccion_registro"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>