<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:background="@drawable/fondo_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:text="@string/registrar_alumno"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_extra_bold_italic"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etRegistrarAlumno"
        android:background="@drawable/fondo_escribir"
        android:textColor="@drawable/texto_edit_text"
        android:hint="@string/comenzar_por_apellidos"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColorHint="@color/grisPalidoOscuro"
        android:textSize="12sp"
        android:paddingHorizontal="15dp"
        android:singleLine="true"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:layout_marginVertical="10dp"
        android:scrollHorizontally="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelarRegistroAlumno"
            android:text="@string/cancelar"
            android:textSize="15sp"
            android:background="@color/blanco"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_width="wrap_content"
            android:elevation="0dp"
            android:translationZ="0dp"
            android:textColor="@drawable/texto_seleccion_cancelacion"
            android:stateListAnimator="@null"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrarAlumno"
            android:text="@string/registrar"
            android:textSize="15sp"
            android:elevation="0dp"
            android:translationZ="0dp"
            android:stateListAnimator="@null"
            android:background="@color/blanco"
            android:textColor="@drawable/texto_seleccion_registro"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>