<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    tools:context=".Grupos">

    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        android:paddingTop="40dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegresar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="&lt;"
            android:textSize="23sp"
            android:textColor="@color/grisPalidoOscuro"
            android:fontFamily="@font/montserrat_extra_bold"
            android:gravity="center"
            android:background="@drawable/fondo_boton_regresar"
            android:padding="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>

        <TextView
            android:text="Regresar"
            android:textSize="15sp"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- CONTENIDO -->
    <LinearLayout
        android:id="@+id/contenido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/grupos"
                android:textSize="25sp"
                android:fontFamily="@font/montserrat_extra_bold"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/crearGrupo"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                android:background="@drawable/fondo_todos_alumnos">

                <ImageView
                    android:src="@drawable/icono_editar"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:text="@string/crear_grupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_extra_bold_italic"
                    android:textColor="@color/grisPalidoOscuro"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/mostrarTodosAlumnos"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_todos_alumnos">

            <ImageView
                android:src="@drawable/icono_todos_alumnos"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:text="@string/todos_los_alumnos"
                android:textColor="@color/grisPalidoOscuro"
                android:fontFamily="@font/montserrat_extra_bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGrupos"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingVertical="5dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/mensajeSinGrupos"
            android:text="@string/sin_grupos_registrados"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:layout_height="150dp"/>


        <TextView
            android:text="@string/alumnos"
            android:textSize="25sp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/verdeDrawer"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/contenedorBuscador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="7dp"
                android:background="@drawable/fondo_redondeado"
                android:backgroundTint="@color/grisPalidoClaro">

                <ImageView
                    android:src="@drawable/icono_buscar"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginHorizontal="5dp"/>

                <EditText
                    android:id="@+id/buscadorAlumnos"
                    android:hint="BUSCAR ALUMNOS"
                    android:maxLines="1"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textSize="12sp"
                    android:textColorHint="@color/grisPalidoOscuro"
                    android:textColor="@color/grisPalidoOscuro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/ordenarAlumnos"
                android:src="@drawable/icono_ordenar"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:background="@drawable/fondo_botones"
                android:layout_marginEnd="10dp"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/masAlumnos"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:background="@drawable/fondo_mas"
                android:gravity="center"
                android:padding="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:elevation="0dp"
                android:translationZ="0dp"
                android:stateListAnimator="@null"
                android:includeFontPadding="false"
                android:textColor="@color/grisPalidoOscuro"
                android:textSize="30sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat_extra_bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/removerAlumno"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="X"
                android:background="@drawable/fondo_menos"
                android:gravity="center"
                android:padding="0dp"
                android:minWidth="0dp"
                android:elevation="0dp"
                android:translationZ="0dp"
                android:stateListAnimator="@null"
                android:minHeight="0dp"
                android:includeFontPadding="false"
                android:textColor="@color/grisPalidoOscuro"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_extra_bold"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlumnos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:visibility="gone"
            android:paddingVertical="5dp"/>


        <TextView
            android:id="@+id/mensajeSinAlumnos"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_marginBottom="50dp"
            android:text="@string/sin_alumnos_registrados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
